<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.events.presentation.view.fragments.EventDetailsFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/purple_700"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/iv_event_image_banner"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="#555"
                    android:contentDescription="@string/event_banner_description"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                    tools:srcCompat="@drawable/ic_image_placeholder" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:title="@string/event_label" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="bottom"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline_event_details_content_horizontal_22"
                app:layout_constraintEnd_toStartOf="@+id/guideline_event_details_content_vertical_65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Feira de adoção de animais na Redenção" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#292"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_date_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline_event_details_content_vertical_65"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="R$ 29,99" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_date_label"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:hint="O evento será em:"
                app:layout_constraintBottom_toTopOf="@+id/btn_check_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline_event_details_content_vertical_65"
                app:layout_constraintTop_toBottomOf="@+id/tv_price"
                app:srcCompat="@drawable/shape_event_image_bottom">

                <EditText
                    android:id="@+id/tv_event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:clickable="false"
                    android:editable="false"
                    android:gravity="center"
                    android:inputType="none"
                    android:textStyle="bold"
                    tools:text="28/03/2022" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_check_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/selector_button_style"
                android:padding="10dp"
                android:text="@string/event_check_in_label"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline_event_details_content_vertical_65"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_label" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline_event_details_content_horizontal_22">

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:textSize="20sp"
                    tools:text="O Patas Dadas estará na Redenção, nesse domingo, com cães para adoção e produtos à venda!\n\nNa ocasião, teremos bottons, bloquinhos e camisetas!\n\nTraga seu Pet, os amigos e o chima, e venha aproveitar esse dia de sol com a gente e com alguns de nossos peludinhos - que estarão prontinhos para ganhar o ♥ de um humano bem legal pra chamar de seu. \n\nAceitaremos todos os tipos de doação:\n- guias e coleiras em bom estado\n- ração (as que mais precisamos no momento são sênior e filhote)\n- roupinhas \n- cobertas \n- remédios dentro do prazo de validadesênior e filhote)\n- roupinhas \n- cobertas \n- remédios dentro do prazo de validadesênior e filhote)\n- roupinhas \n- cobertas \n- remédios dentro do prazo de validadesênior e filhote)\n- roupinhas \n- cobertas \n- remédios dentro do prazo de validadesênior e filhote)\n- roupinhas \n- cobertas \n- remédios dentro do prazo de validadesênior e filhote)\n- roupinhas \n- cobertas \n- remédios dentro do prazo de validadesênior e filhote)\n- roupinhas \n- cobertas \n- remédios dentro do prazo de validadesênior e filhote)\n- roupinhas \n- cobertas \n- remédios dentro do prazo de validade...\n...." />

            </androidx.core.widget.NestedScrollView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_event_details_content_vertical_65"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.65" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_event_details_content_horizontal_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.22" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include
        android:id="@+id/cl_error"
        layout="@layout/include_layout_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <include
        android:id="@+id/progress_bar"
        layout="@layout/include_blocking_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
